--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/xml2js": "^0.4.14",
     "eslint": "^9.14.0",
     "eslint-config-next": "^15.0.3",
     "rimraf": "^6.0.1",
