--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "pnpm run type-check"
   },
   "dependencies": {
+    "critters": "^0.0.25",
     "memory-cache": "^0.2.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
