feat: Update HVCI tagging workflow and remove deprecated scripts

--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "type-check": "tsc --noEmit",
     "clean": "rimraf .next",
     "update-data": "node scripts/update-data.js",
-    "check-vulnerable-drivers": "node scripts/check-vulnerable-drivers.js",
-    "check-results": "node scripts/check-results.js",
-    "test-hvci": "node scripts/test-hvci.js",
-    "test-hvci-dry": "DRY_RUN=true node scripts/test-hvci.js",
     "postinstall": "pnpm run type-check"
   },
   "dependencies": {
@@ -24,8 +20,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.2.5",
-    "xml2js": "^0.6.2"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -33,7 +28,6 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/xml2js": "^0.4.14",
     "eslint": "^9.14.0",
     "eslint-config-next": "^15.0.3",
     "rimraf": "^6.0.1",
