--- a/.github/workflows/driver-tagging.yml
+++ b/.github/workflows/driver-tagging.yml
@@ -658,7 +658,11 @@ jobs:
         $statusCounts = @{}
         foreach ($result in $validationResults.Values) {
             $status = $result.status
-            $statusCounts[$status] = ($statusCounts[$status] ?? 0) + 1
+            if ($statusCounts.ContainsKey($status)) {
+                $statusCounts[$status] = $statusCounts[$status] + 1
+            } else {
+                $statusCounts[$status] = 1
+            }
         }
         
         Write-Host ""
