--- a/.github/workflows/hvci-drivers-check.yml
+++ b/.github/workflows/hvci-drivers-check.yml
@@ -308,8 +308,9 @@ jobs:
         $allDrivers | Export-Csv -Path $csvPath -NoTypeInformation
         Write-Host "CSV file created at $csvPath with $($allDrivers.Count) entries"
         
-        # Save updated JSON
-        $driversData | ConvertTo-Json -Depth 10 | Out-File -FilePath "data/drv.json" -Encoding utf8
+        # Save updated JSON with proper formatting
+        $jsonOutput = $driversData | ConvertTo-Json -Depth 100
+        $jsonOutput | Out-File -FilePath "data/drv.json" -Encoding UTF8 -NoNewline
         Write-Host "Updated drv.json with $modifiedDrivers modified driver entries"
         
         # Set environment variables for summary
